--- a/coc-settings.json
+++ b/coc-settings.json
@@ -7,7 +7,10 @@
     "json",
     "javascriptreact",
     "typescript.tsx",
-    "graphql"
+    "graphql",
+    "solidity",
+    "rust",
+    "java"
   ],
   "rust-analyzer.hover.documentation": true,
   "rust-analyzer.trace.server": "verbose"
